# uv-workspace-managed-lambda-example

./: README.md  noxfile.py  pyproject.toml
docs/: article.md
